<resources>
    <string name="app_name">Riya Sewana</string>
    <string name="txtHello">HELLO !</string>
    <string name="welcomeTo">WELCOME TO</string>
    <string name="riya">RIYA</string>
    <string name="sewana">SEWANA</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="WantToKnow">WANT TO KNOW MORE?</string>
    <string name="terms"><![CDATA[TERMS & CONDITIONS]]></string>
    <string name="termsandconditions"><![CDATA[Terms & Conditions]]></string>
    <string name="termTopic">riyasewana.com is a service provided by Riyasewana Lanka Private Limited (subject to your compliance with the Terms and Conditions set forth below). Please read these Terms and Conditions carefully before using this Web Site.</string>
    <string name="TopicGeneral">General</string>
    <string name="genaralP1"><![CDATA[Advertisers and users are responsible for ensuring that advertising content, text, images, graphics, video (\"Content\") uploaded for inclusion on riyasewana.com complies with all applicable laws. riyasewana.com & Riyasewana Lanka Private Limited assumes no responsibility for any illegality or any inaccuracy of the Content.]]></string>
    <string name="genaralP2">The advertisers and user guarantees that his or her Content do not violate any copyright, intellectual property rights or other rights of any person or entity, and agrees to release riyasewana.com and Riyasewana Lanka Private Limited from all obligations, liabilities and claims arising in connection with the use of (or the inability to use) the service.</string>
    <string name="generalP3">To avoid any conflict or doubt: Riyasewana.com is merely a platform / service provider and is not involved in the actual sale and / or purchase transaction of the vehicle(s) between the users. Riyasewana.com does not warrant, represent, authorize or endorse the reliability, accuracy or completeness of the data and / or information of the vehicles, as advertised by the sellers on the site</string>
    <string name="generalP4">Riyasewana.com reserves the right to remove any content that is deemed inappropriate by the site administrator including but not limited to spam, duplicate content, suspicious ads, non-automobile ads, vehicles not located in Sri Lanka and Japanese auction ads without any prior warning to the user.</string>
    <string name="generalP5"><![CDATA[riyasewana.com & Riyasewana Lanka Private Limited shall have the absolute discretion to edit or amend or modify the advertisement or the content for editorial purposes.]]></string>
    <string name="copyrightP1">Advertisers grant riyasewana.com and Riyasewana Lanka Private Limited a perpetual, royalty-free, irrevocable, non-exclusive right and license to use, reproduce, modify, adapt, publish, translate, create derivative works from and distribute such Content or incorporate such Content into any form, medium, or technology now known or later developed.</string>
    <string name="copyrightP2">The material (including the Content, and any other content, software or services) contained on riyasewana.com are the property of Riyasewana Lanka Private Limited, its subsidiaries, affiliates and/or third party licensors. Any intellectual property rights, such as copyright, trademarks, service marks, trade names and other distinguishing brands on the Web Site are the property of Riyasewana Lanka Private Limited. To be clear: No material on this site may be copied, reproduced, republished, installed, posted, transmitted, stored or distributed without written permission from Riyasewana Lanka Private Limited.</string>
    <string name="TopicCopyright">Copyright</string>
    <string name="TopicWatermarks">Watermarks</string>
    <string name="WatermarksP">All images on riyasewana.com are watermarked, which prevents the images to be used for other purposes, without the consent of the advertiser.</string>
    <string name="EaddrssAndPhoneTopic">Email address And Phone numbers of users</string>
    <string name="EaddrssAndPhoneP">Users are required to submit a valid email addres and a phone number. Any accounts with invalid or unverifiable phone numbers will be removed without any prior warning to the user.</string>
    <string name="TopicDonations">Donations</string>
    <string name="DonationsP">Riyasewana.com is a free service and does not charge any money to post advertisements. All donations/contributions by the users are strictly voluntary.</string>
    <string name="TopicDisclaimer">Disclaimer</string>
    <string name="DisclaimerP">riyasewana.com and Riyasewana Lanka Private Limited assume no responsibility what so ever for the use of riyasewana.com and disclaims all responsibility for any injury, claim, liability, or damage of any kind resulting from or arising out of or any way related to (a) any errors on riyasewana.com or the Content, including but not limited to technical errors and typographical errors, (b) any third party web sites or content directly or indirectly accessed through links in riyasewana.com, (c) the unavailability of riyasewana.com, (d) your use of riyasewana.com or the Content, or (e) your use of any equipment (or software) in connection with riyasewana.com</string>
    <string name="TopicIndemnification">Indemnification</string>
    <string name="IndemnificationP">Advertisers and users agree to indemnify riyasewana.com And Riyasewana Lanka Private Limited as well as its officers, directors, employees, agents, from and against all losses, expenses, damages and costs, including attorneys fees, resulting from any violation of this Terms and Conditions (including negligent or wrongful conduct).</string>
    <string name="TopicModifications">Modifications</string>
    <string name="ModificationsP">riyasewana.com And Riyasewana Lanka Private Limited reserves the right to modify these Terms and Conditions. Such modifications shall be effective immediately upon posting on riyasewana.com. You are responsible for the reviewing of such modifications. Your continued access or use of riyasewana.com shall be deemed your acceptance of the modified terms and conditions.</string>
    <string name="TopicGoverninglaw">Governing law</string>
    <string name="GoverninglawP">This Agreement shall be governed by and construed and interpreted in accordance with the laws of Sri Lanka and the parties will submit all disputes arising under or in connection with this Agreement to the exclusive jurisdiction of the Courts of Sri Lanka.</string>
    <string name="TopicTermination">Termination</string>
    <string name="TerminationP">If the advertiser or user is dissatisfied with the service or if they do not agree with any part of this agreement or the service then the sole and exclusive remedy is to discontinue using the service.</string>
    <string name="welcomeBack">WELCOME BACK !</string>
    <string name="enterUName">Enter User Name</string>
    <string name="enterPass">Enter Password</string>
    <string name="forgotPass">Forgot Your Password?</string>
    <string name="dontHaveAccount">Don\'t have an account?</string>
    <string name="otherMethods">Use Other Methods</string>
    <string name="here">Here\'s</string>
    <string name="yourFirst">Your First</string>
    <string name="stepWith">Step With</string>
    <string name="us">Us</string>
    <string name="enterName">Enter Name</string>
    <string name="enterEmail">Enter Email</string>
    <string name="next">Next</string>
    <string name="alreadyHaveAccount">Already have an account?</string>
    <string name="MobileNumber">Mobile Number</string>
    <string name="code">CODE</string>
    <string name="verification">VERIFICATION</string>
    <string name="enteronetimepass">Enter One Time Password Sent On</string>
    <string name="countrycode">+94</string>
    <string name="number">772729729</string>
    <string name="didntReceiveOTP">Didn\'t receive the OTP?</string>
    <string name="resend">Resend</string>
    <string name="verifyCode">VERIFY CODE</string>
    <string name="enterMobileOnce">Enter Your Mobile Number which you used when Register as new Member.</string>
    <string name="setYour">Set Your</string>
    <string name="newPass">New Password</string>
    <string name="newTopic">NEW</string>
    <string name="credintial">CREDENTIALS</string>
    <string name="identityVerified">Your identity has been verified!</string>
    <string name="setYourNewPass">Set your new password</string>
    <string name="confirmPass">Confirm Password</string>
    <string name="update">UPDATE</string>
    <string name="passUpdated">Your password has been updated</string>
    <string name="skipTag">SKIP</string>
    <string name="welcomeToRiyaSewana">Welcome to Riya Sewana</string>
    <string name="experianceBetterWay">Experiance a better way of buying and selling</string>
    <string name="easiestWay">Easiest way to Buy and Sell Vehicles and Vehicle Accessories</string>
    <string name="buyandsell"><![CDATA[Buy & Sell Cars/ Accessories]]></string>
    <string name="youDontWantTo">You don\'t have to be a mechanic to make a little money on  cars and accessories</string>
    <string name="sellingAtHighestValue"><![CDATA[Selling Cars & Accessories at Their Highest Value!]]></string>
    <string name="BargainLike">Bargain like a shark</string>
    <string name="sellYouVehicle">Sell Your Vehicles or Accessories on Riya Sewana! It\'s easy and free</string>
    <string name="putYourAd">Put Your Advertisement Free Today!</string>
    <string name="letsStart">Let\'s start</string>
    <string name="nav_home">Home</string>
    <string name="nav_search">Search</string>
    <string name="nav_fav">Favourites</string>
    <string name="nav_mess">Message</string>
    <string name="nav_pro">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_add">Add</string>
    <string name="explore">Explore</string>
    <string name="parts">Parts</string>
    <string name="vehicles">Vehicles</string>
    <string name="contact">Contact</string>
    <string name="things_you">Things You</string>
    <string name="love">Love</string>
    <string name="loading">Loading ...</string>
    <string name="pleaseWait">Please Wait.</string>
    <string name="what_would">What would you</string>
    <string name="search_for">search for?</string>
    <string name="search_vehicle">Vehicles</string>
    <string name="search_parts">Parts</string>
    <string name="add_a_new">Add a new</string>
    <string name="advertisement">advertisement</string>
    <string name="vehicle_name">Vehicle Name</string>
    <string name="vehicle_price">Vehicle Price</string>
    <string name="vehicle_mileage">Mileage</string>
    <string name="vehicle_type">Type</string>
    <string name="vehicle_location">Location</string>
    <string name="search_bar_vehicle">Search Vehicle</string>
    <string name="contact_info_add">Contact Info</string>
    <string name="vehicle_features">Features</string>
    <string name="vehicle_specifications">Specifications</string>
    <string name="vehicle_specification_engine">Engine - 6498CC</string>
    <string name="vehicle_specification_transmission">Transmission</string>
    <string name="vehicle_specification_year">Year - 2004</string>
    <string name="vehicle_specification_condition">Condition-Used</string>
    <string name="vehicle_specification_mileage">Mileage-963km</string>
    <string name="vehicle_specification_fuel">Fuel Type - Petrol</string>
    <string name="vehicle_description">Description</string>
    <string name="vehicle_description_area">Price negotiable after inspection. Reasonable offers are welcomed</string>
    <string name="vehicle_location_view">Location</string>
    <string name="haveAQuestion">Have a Question</string>
    <string name="inYourMind">In Your Mind</string>
    <string name="contactUs">Contact Us</string>
    <string name="socialProfiles">Social Profiles</string>
</resources>