<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="20dp"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/vehicle_linear_layout">


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:id="@+id/recycler_vehicle_img"
                android:src="@mipmap/ic_launcher"/>




            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/vehicle_name"
                    android:text="@string/vehicle_name"
                    android:layout_marginLeft="6dp"
                    android:layout_marginTop="2dp"
                    android:textAlignment="textStart"
                    android:fontFamily="@font/montserrat_bold"
                    android:textColor="@color/textColor"
                    android:textSize="20dp"
                    android:gravity="start" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/vehicle_price"
                    android:text="@string/vehicle_price"
                    android:layout_marginRight="6dp"
                    android:layout_marginTop="2dp"
                    android:textAlignment="textEnd"
                    android:fontFamily="@font/montserrat"
                    android:textColor="@color/green"
                    android:textSize="20dp"
                    android:gravity="end" />



            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/vehicle_mileage"
                    android:text="@string/vehicle_mileage"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="8dp"
                    android:textAlignment="textStart"
                    android:fontFamily="@font/montserrat"
                    android:textColor="@color/lightBlue"
                    android:textSize="18dp"
                    android:gravity="start" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/vehicle_type"
                    android:text="@string/vehicle_type"
                    android:layout_marginRight="4dp"
                    android:layout_marginTop="8dp"
                    android:textAlignment="center"
                    android:fontFamily="@font/montserrat"
                    android:textColor="@color/lightBlue"
                    android:textSize="18dp"
                    android:gravity="center_horizontal" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/vehicle_location"
                    android:text="@string/vehicle_location"
                    android:layout_marginRight="4dp"
                    android:layout_marginTop="8dp"
                    android:textAlignment="textEnd"
                    android:fontFamily="@font/montserrat"
                    android:textColor="@color/lightBlue"
                    android:textSize="18dp"
                    android:gravity="end" />

            </RelativeLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>